--- a/index.html
+++ b/index.html
@@ -17,5 +17,83 @@
     <p>Yustiar</p>
     <p>Jumlah Point = 1</p>
     <p>Asal Sekolah = SMAN 1 Blora</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+    
+    <p>Fatu Ulla Habibi</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMAN 1 Grobogan</p>
+
+     <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Apri</p>
+    <p>Jumlah Point = 2</p>
+    <p>Asal Sekolah = SMP 1 Grobogan</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+    
+    <p>Ando</p>
+    <p>Jumlah Point = 2</p>
+    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Gereng</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Rizky Budhi S</p>
+    <p>Jumlah Point = 2</p>
+    <p>Asal Sekolah = SMP 1 Grobogan</p>
+
+     <br> <!-- Ini untuk memberikan spasi antar blok -->   
+
+    <p>Risal</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Puji U</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK Asta Mitra Purwodadi</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Arga</p>
+    <p>Jumlah Point = 4</p>
+    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Apip</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = MAN 1 Grobogan</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Mareto</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMKN 1 Purwodadi</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Metta</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMP 1 Grobogan</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Wahyu Hidayatullah</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK Pembnas</p>
+
+    <br> <!-- Ini untuk memberikan spasi antar blok -->
+
+    <p>Agung</p>
+    <p>Jumlah Point = 7</p>
+    <p>Asal Sekolah = Alumni</p>
 </body>
 </html>
