--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Asal Sekolah = SMAN 1 Blora</p>
 
     <p>Yustiar</p>
-    <p>Jumlah Point = 1</p>
+    <p>Jumlah Point = </p>
     <p>Asal Sekolah = SMAN 1 Blora</p>
 
     <p>Fatu Ulla Habibi</p>
@@ -67,5 +67,45 @@
     <p>Agung</p>
     <p>Jumlah Point = 7</p>
     <p>Asal Sekolah = Alumni</p>
+
+    <p>Wahyu Hidayatulloh</p>
+    <p>Jumlah Point = 3</p>
+    <p>Asal Sekolah = SMK Pembnas</p>
+
+    <p>Arif Udin</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = Ma Shofa Marwa</p>
+
+    <p>Singgih</p>
+    <p>Jumlah Point = 13</p>
+    <p>Asal Sekolah = SMK N 1 Purwodadi</p>
+
+    <p>Agus Tri Wibowo</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK Pembnas Purwodadi</p>
+
+    <p>Abdul Kholil</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = Ma Shofa Marwa</p>
+
+    <p>Taufik Adil</p>
+    <p>Jumlah Point = 3</p>
+    <p>Asal Sekolah = Ma Shofa Marwa</p>
+
+    <p>Cenut</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = Al Islah</p>
+
+    <p>Andre</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+
+    <p>Mutakim</p>
+    <p>Jumlah Point = 10</p>
+    <p>Asal Sekolah = SMA Miftahul Huda</p>
+
+    <p>Saka</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK Taruna</p>
 </body>
 </html>
