--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perolehan Point</title>
+    <title>Tukarkan Poinmmu</title>
 </head>
 <body>
-    <h1>Perolehan Point</h1>
+    <h1>Tukarkan Poinmu</h1>
     
     <p>Wahyu Junianto</p>
     <p>Jumlah Point = 1</p>
