--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Asal Sekolah = SMAN 1 Blora</p>
 
     <p>Yustiar</p>
-    <p>Jumlah Point = </p>
+    <p>Jumlah Point = 1</p>
     <p>Asal Sekolah = SMAN 1 Blora</p>
 
     <p>Fatu Ulla Habibi</p>
