--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tukarkan Poinmmu</title>
+    <title>Perolehan Point</title>
 </head>
 <body>
     <h1>Tukarkan Poinmu</h1>
@@ -13,7 +13,7 @@
     <p>Asal Sekolah = SMAN 1 Blora</p>
 
     <p>Yustiar</p>
-    <p>Jumlah Point = 1</p>
+    <p>Jumlah Point = </p>
     <p>Asal Sekolah = SMAN 1 Blora</p>
 
     <p>Fatu Ulla Habibi</p>
@@ -60,6 +60,10 @@
     <p>Jumlah Point = 1</p>
     <p>Asal Sekolah = SMP 1 Grobogan</p>
 
+    <p>Wahyu Hidayatullah</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK Pembnas</p>
+
     <p>Agung</p>
     <p>Jumlah Point = 7</p>
     <p>Asal Sekolah = Alumni</p>
@@ -73,7 +77,7 @@
     <p>Asal Sekolah = Ma Shofa Marwa</p>
 
     <p>Singgih</p>
-    <p>Jumlah Point = 13</p>
+    <p>Jumlah Point = 20</p>
     <p>Asal Sekolah = SMK N 1 Purwodadi</p>
 
     <p>Agus Tri Wibowo</p>
@@ -85,7 +89,7 @@
     <p>Asal Sekolah = Ma Shofa Marwa</p>
 
     <p>Taufik Adil</p>
-    <p>Jumlah Point = 3</p>
+    <p>Jumlah Point = 4</p>
     <p>Asal Sekolah = Ma Shofa Marwa</p>
 
     <p>Cenut</p>
@@ -103,5 +107,49 @@
     <p>Saka</p>
     <p>Jumlah Point = 1</p>
     <p>Asal Sekolah = SMK Taruna</p>
+
+    <p>risz</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SBI</p>
+
+    <p>Jusuf Firman Ghani</p>
+    <p>Jumlah Point = 2</p>
+    <p>Asal Sekolah = SMK Taruna Kradenan</p>
+
+    <p>Wisnu Cahyono</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK Taruna Kradenan</p>
+
+    <p>Vicky Safana Putra</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK Taruna Kradenan</p>
+
+    <p>Antok</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK Taruna</p>
+
+    <p>Achmad Jazuli</p>
+    <p>Jumlah Point = 2</p>
+    <p>Asal Sekolah = SKM Muhammad 1 Blora</p>
+
+    <p>IBNU RIDHO PANGGALEH</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK 1 MUHAMMADIYAH</p>
+
+    <p>Soniken</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = smk pancasila</p>
+
+    <p>MOH. DZIKRULLAH</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK MUHAMMADIYYAH 2 CEPU</p>
+
+    <p>arka</p>
+    <p>Jumlah Point = 3</p>
+    <p>Asal Sekolah = SAS</p>
+
+    <p>sigit</p>
+    <p>Jumlah Point = 1</p>
+    <p>Asal Sekolah = SMK</p>
 </body>
 </html>
