--- a/index.html
+++ b/index.html
@@ -1,155 +1,437 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perolehan Point</title>
+    <title>Tukarkan Poinmu</title>
+    <style>
+        body {
+            background-color: blue;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        .info {
+            margin: 20px;
+            padding: 10px;
+            border: 1px solid white;
+        }
+    </style>
 </head>
 <body>
     <h1>Tukarkan Poinmu</h1>
     
-    <p>Wahyu Junianto</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMAN 1 Blora</p>
+    <div class="info">
+        <h2>Abdul Kolil</h2>
+        <p>Jumlah Point = 2</p>
+        <p>Asal Sekolah = MA Shofa Marwa</p>
+    </div>
 
-    <p>Yustiar</p>
-    <p>Jumlah Point = </p>
-    <p>Asal Sekolah = SMAN 1 Blora</p>
+    <div class="info">
+        <h2>Achmad Jazuli</h2>
+        <p>Jumlah Point = 2</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
 
-    <p>Fatu Ulla Habibi</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMAN 1 Grobogan</p>
+    <div class="info">
+        <h2>Adam Rissuwanto</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Kedungadem</p>
+    </div>
 
-    <p>Apri</p>
-    <p>Jumlah Point = 2</p>
-    <p>Asal Sekolah = SMP 1 Grobogan</p>
+    <div class="info">
+        <h2>Agung</h2>
+        <p>Jumlah Point = 7</p>
+        <p>Asal Sekolah = Alumni</p>
+    </div>
 
-    <p>Ando</p>
-    <p>Jumlah Point = 2</p>
-    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    <div class="info">
+        <h2>Agus Tri Wibowo</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = Smk Pembnas Purwodadi</p>
+    </div>
 
-    <p>Gereng</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    <div class="info">
+        <h2>Ahmad Mustofa Dian prayoga</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
 
-    <p>Rizky Budhi S</p>
-    <p>Jumlah Point = 2</p>
-    <p>Asal Sekolah = SMP 1 Grobogan</p>
+    <div class="info">
+        <h2>Alfian Dimas Julian</h2>
+        <p>Jumlah Point = 3</p>
+        <p>Asal Sekolah = Smk Muhammadiyah Kunduran</p>
+    </div>
 
-    <p>Risal</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    <div class="info">
+        <h2>Ando</h2>
+        <p>Jumlah Point = 2</p>
+        <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    </div>
 
-    <p>Puji U</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK Asta Mitra Purwodadi</p>
+    <div class="info">
+        <h2>Andre</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    </div>
 
-    <p>Arga</p>
-    <p>Jumlah Point = 4</p>
-    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    <div class="info">
+        <h2>Andre Gondre</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Gajahmada</p>
+    </div>
 
-    <p>Apip</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = MAN 1 Grobogan</p>
+    <div class="info">
+        <h2>Antok</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Taruna</p>
+    </div>
 
-    <p>Mareto</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMKN 1 Purwodadi</p>
+    <div class="info">
+        <h2>Apip</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = MAN 1 Grobogan</p>
+    </div>
 
-    <p>Metta</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMP 1 Grobogan</p>
+    <div class="info">
+        <h2>Apri</h2>
+        <p>Jumlah Point = 2</p>
+        <p>Asal Sekolah = SMP 1 Grobogan</p>
+    </div>
 
-    <p>Wahyu Hidayatullah</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK Pembnas</p>
+    <div class="info">
+        <h2>Aprilliano Putra Wiguna</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
 
-    <p>Agung</p>
-    <p>Jumlah Point = 7</p>
-    <p>Asal Sekolah = Alumni</p>
+    <div class="info">
+        <h2>ARDHYA AFFANDI</h2>
+        <p>Jumlah Point = 5</p>
+        <p>Asal Sekolah = SMA 1 Grobogan</p>
+    </div>
 
-    <p>Wahyu Hidayatulloh</p>
-    <p>Jumlah Point = 3</p>
-    <p>Asal Sekolah = SMK Pembnas</p>
+    <div class="info">
+        <h2>Ardiansyah fernando</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muda Blora</p>
+    </div>
 
-    <p>Arif Udin</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = Ma Shofa Marwa</p>
+    <div class="info">
+        <h2>Arga</h2>
+        <p>Jumlah Point = 8</p>
+        <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    </div>
 
-    <p>Singgih</p>
-    <p>Jumlah Point = 20</p>
-    <p>Asal Sekolah = SMK N 1 Purwodadi</p>
+    <div class="info">
+        <h2>Arif Udin</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = MA Shofa Marwa</p>
+    </div>
 
-    <p>Agus Tri Wibowo</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK Pembnas Purwodadi</p>
+    <div class="info">
+        <h2>Arka</h2>
+        <p>Jumlah Point = 7</p>
+        <p>Asal Sekolah = SAS</p>
+    </div>
 
-    <p>Abdul Kholil</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = Ma Shofa Marwa</p>
+    <div class="info">
+        <h2>Asep</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Taruna</p>
+    </div>
 
-    <p>Taufik Adil</p>
-    <p>Jumlah Point = 4</p>
-    <p>Asal Sekolah = Ma Shofa Marwa</p>
+    <div class="info">
+        <h2>Aufal</h2>
+        <p>Jumlah Point = 2</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
 
-    <p>Cenut</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = Al Islah</p>
+    <div class="info">
+        <h2>Budi Rahayu</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
 
-    <p>Andre</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    <div class="info">
+        <h2>Cenut</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Al Ishlah</p>
+    </div>
 
-    <p>Mutakim</p>
-    <p>Jumlah Point = 10</p>
-    <p>Asal Sekolah = SMA Miftahul Huda</p>
+    <div class="info">
+        <h2>Darjo</h2>
+        <p>Jumlah Point = 4</p>
+        <p>Asal Sekolah = GM</p>
+    </div>
 
-    <p>Saka</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK Taruna</p>
+    <div class="info">
+        <h2>Dino R</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK N 1 Wirosari</p>
+    </div>
 
-    <p>risz</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SBI</p>
+    <div class="info">
+        <h2>Edy</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK N 1 Kunduran</p>
+    </div>
 
-    <p>Jusuf Firman Ghani</p>
-    <p>Jumlah Point = 2</p>
-    <p>Asal Sekolah = SMK Taruna Kradenan</p>
+    <div class="info">
+        <h2>Farrel Luthfi Aldo Pratama</h2>
+        <p>Jumlah Point = 3</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
 
-    <p>Wisnu Cahyono</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK Taruna Kradenan</p>
+    <div class="info">
+        <h2>Fatu Ula Habibi</h2>
+        <p>Jumlah Point = 2</p>
+        <p>Asal Sekolah = SMA N 1 GROBOGAN</p>
+    </div>
 
-    <p>Vicky Safana Putra</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK Taruna Kradenan</p>
+    <div class="info">
+        <h2>Ferry</h2>
+        <p>Jumlah Point = 3</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 2 Cepu</p>
+    </div>
 
-    <p>Antok</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK Taruna</p>
+    <div class="info">
+        <h2>Gereng</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMA NEGERI 1 GROBOGAN</p>
+    </div>
 
-    <p>Achmad Jazuli</p>
-    <p>Jumlah Point = 2</p>
-    <p>Asal Sekolah = SKM Muhammad 1 Blora</p>
+    <div class="info">
+        <h2>Indra Maulana Ginung Pratia</h2>
+        <p>Jumlah Point = 3</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
 
-    <p>IBNU RIDHO PANGGALEH</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK 1 MUHAMMADIYAH</p>
+    <div class="info">
+        <h2>Guruh Ramadani</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
 
-    <p>Soniken</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = smk pancasila</p>
+    <div class="info">
+        <h2>Hanif Khoirul Anam</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK 1 MUHAMMADIYAH 1 BLORA</p>
+    </div>
 
-    <p>MOH. DZIKRULLAH</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK MUHAMMADIYYAH 2 CEPU</p>
+    <div class="info">
+        <h2>Haris Tesa</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = Smk Pancasila</p>
+    </div>
 
-    <p>arka</p>
-    <p>Jumlah Point = 3</p>
-    <p>Asal Sekolah = SAS</p>
+    <div class="info">
+        <h2>Hiba Adita Romadhon</h2>
+        <p>Jumlah Point = 3</p>
+        <p>Asal Sekolah = SMK PANCASILA</p>
+    </div>
 
-    <p>sigit</p>
-    <p>Jumlah Point = 1</p>
-    <p>Asal Sekolah = SMK</p>
+    <div class="info">
+        <h2>Huda</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = MA Shofa Marwa</p>
+    </div>
+
+    <div class="info">
+        <h2>IBNU RIDHO PANGGALEH</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>Jusuf Firman Ghani</h2>
+        <p>Jumlah Point = 5</p>
+        <p>Asal Sekolah = SMK Taruna Kradenan</p>
+    </div>
+
+    <div class="info">
+        <h2>Leo Putra Herlanggga</h2>
+        <p>Jumlah Point = 2</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>Lucky Wahyu Ramadhan</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>M. REHAN ADI N</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>Mareto</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK 1 PWD</p>
+    </div>
+
+    <div class="info">
+        <h2>Metta</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK 1 PWD</p>
+    </div>
+
+    <div class="info">
+        <h2>MOH. DZIKRULLAH</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 2 Cepu</p>
+    </div>
+
+    <div class="info">
+        <h2>Mohammad Rama Dani Pujianto</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>Mutakim</h2>
+        <p>Jumlah Point = 10</p>
+        <p>Asal Sekolah = SMK Miftahul Huda</p>
+    </div>
+
+    <div class="info">
+        <h2>Noval Dika Saputra</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>Novita</h2>
+        <p>Jumlah Point = 3</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Cepu</p>
+    </div>
+
+    <div class="info">
+        <h2>Pitra</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>Puji Utami</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = Smk Asta Mitra Purwodadi</p>
+    </div>
+
+    <div class="info">
+        <h2>Rafa</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = Mts YPI Boloh</p>
+    </div>
+
+    <div class="info">
+        <h2>Rehan</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>Ridwan Aris Romadolna</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMA N 1 Pulokulon</p>
+    </div>
+
+    <div class="info">
+        <h2>RISZ</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SBI</p>
+    </div>
+
+    <div class="info">
+        <h2>Rizky Budhi Syahputra</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMA N 1 Grobogan</p>
+    </div>
+
+    <div class="info">
+        <h2>Sabastian Adi Nugroho</h2>
+        <p>Jumlah Point = 8</p>
+        <p>Asal Sekolah = Alumni SMAN 1 Cepu</p>
+    </div>
+
+    <div class="info">
+        <h2>Saka</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Taruna</p>
+    </div>
+
+    <div class="info">
+        <h2>Sigit</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = Alumni</p>
+    </div>
+
+    <div class="info">
+        <h2>Singgih</h2>
+        <p>Jumlah Point = 24</p>
+        <p>Asal Sekolah = SMK N 1 Purwodadi</p>
+    </div>
+
+    <div class="info">
+        <h2>Singke</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = Mts YPI boloh</p>
+    </div>
+
+    <div class="info">
+        <h2>Soniken</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Pancasila</p>
+    </div>
+
+    <div class="info">
+        <h2>Taufik Adil</h2>
+        <p>Jumlah Point = 8</p>
+        <p>Asal Sekolah = MA Shofa Marwa</p>
+    </div>
+
+    <div class="info">
+        <h2>Vicky safana putra</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Taruna</p>
+    </div>
+
+    <div class="info">
+        <h2>Wahyu Hidayatulloh</h2>
+        <p>Jumlah Point = 3</p>
+        <p>Asal Sekolah = SMK Pembnas</p>
+    </div>
+
+    <div class="info">
+        <h2>Wahyu Nur Hidayatullah</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = MA Shofa Marwa</p>
+    </div>
+
+    <div class="info">
+        <h2>Wahyu Zaidan</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
+        <h2>Wisnu Cahyono</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Taruna Kradenan</p>
+    </div>
+
+    <div class="info">
+        <h2>Yanto</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = MA Shofa Marwa</p>
+    </div>
+
+    <div class="info">
+        <h2>Yulianto</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
 </body>
 </html>
