--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 20px;
         }
         .info {
-            margin: 20px;
             padding: 10px;
             border: 1px solid white;
         }
