--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div class="info">
         <h2>Arif Udin</h2>
-        <p>Jumlah Point = 1</p>
+        <p>Jumlah Point = 2</p>
         <p>Asal Sekolah = MA Shofa Marwa</p>
     </div>
 
@@ -215,7 +215,7 @@
 
     <div class="info">
         <h2>Fatu Ula Habibi</h2>
-        <p>Jumlah Point = 6</p>
+        <p>Jumlah Point = 13</p>
         <p>Asal Sekolah = SMA N 1 GROBOGAN</p>
     </div>
 
@@ -346,6 +346,12 @@
     </div>
 
     <div class="info">
+        <h2>Muhammad Abi</h2>
+        <p>Jumlah Point = 2</p>
+        <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
+    </div>
+
+    <div class="info">
         <h2>Mohammad Rama Dani Pujianto</h2>
         <p>Jumlah Point = 1</p>
         <p>Asal Sekolah = SMK Muhammadiyah 1 Blora</p>
@@ -449,7 +455,7 @@
 
     <div class="info">
         <h2>Taufik Adil</h2>
-        <p>Jumlah Point = 10</p>
+        <p>Jumlah Point = 12</p>
         <p>Asal Sekolah = MA Shofa Marwa</p>
     </div>
 
@@ -485,7 +491,7 @@
 
     <div class="info">
         <h2>Yanto</h2>
-        <p>Jumlah Point = 1</p>
+        <p>Jumlah Point = 2</p>
         <p>Asal Sekolah = MA Shofa Marwa</p>
     </div>
 
