--- a/index.html
+++ b/index.html
@@ -419,8 +419,14 @@
 
     <div class="info">
         <h2>Sabastian Adi Nugroho</h2>
-        <p>Jumlah Point = 8</p>
+        <p>Jumlah Point = 12</p>
         <p>Asal Sekolah = Alumni SMAN 1 Cepu</p>
+    </div>
+
+    <div class="info">
+        <h2>Sabar Adi Mas Nugroho </h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = SMK Satya Bhakti Ilmu </p>
     </div>
 
     <div class="info">
