--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
     </div>
 
     <div class="info">
+        <h2>Aliyudin fami saputra</h2>
+        <p>Jumlah Point = 1</p>
+        <p>Asal Sekolah = Smp pgri tawangharjo</p>
+    </div>
+    
+    <div class="info">
         <h2>Ando</h2>
         <p>Jumlah Point = 2</p>
         <p>Asal Sekolah = SMA N 1 Grobogan</p>
